gui/editor/ArrayListEditor: Fix Java9+ deprecation for new Integer.